Fixing styles for visibility buttons in sign-in
Visibility buttons were outside input fields.
The style was for id instead of class.

--- a/src/styles/sign-up-and-log-in.css
+++ b/src/styles/sign-up-and-log-in.css
@@ -111,11 +111,12 @@ button:disabled:hover{
 
 
 
-#password-container{
+.password-container{
   position: relative;
   display: flex;
   align-items: center;
 }
+
 
 .password-visibility-icon {
   position: absolute;
